Fix the warnings
Bug: Not applicable
Test: Not applicable
Change-Id: I5f91bc2057973879357a1c2269740626d12b93e0

GitOrigin-RevId: f1c258e1bf96330d4451c1ae761d95c7f3919b5f